Parser/ts_java/src/main/java/com/parser/ts/tsParser.java
// Generated from D:\soft\free\ts_grammar\grammar\ts.g4 by ANTLR 4.8
package com.parser.ts;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SINGLE_QUOTED_LITERAL=1, TYPE=2, Program=3, Data=4, Property=5, Participant=6, 
		Participant_x509Identities=7, FUNCTION=8, STRING=9, NUMBER=10, BOOLEAN=11, 
		READONLY=12, TYPE_KEYWORD=13, PUBLIC=14, ASYNC=15, X_ON_CHAIN_ANNOTATION=16, 
		X_ON_MAIN_SYSTEM_ANNOTATION=17, X_ALL_ANNOTATION=18, X_ONLY_ON_CHAIN_ANNOTATION=19, 
		READONLY_ANNOTATION=20, VALIDATE_ANNOTATION=21, REQUIRED_ANNOTATION=22, 
		YUP=23, COMMENT_START=24, COMMENT_END=25, LESS_EQUAL=26, GREATER_EQUAL=27, 
		OPEN_BLOCK=28, CLOSE_BLOCK=29, EQUAL=30, SEMICOLON=31, COLON=32, COMMA=33, 
		OPEN_BRACKET=34, CLOSE_BRACKET=35, OPEN_CBRACE=36, CLOSE_CBRACE=37, IDENTIFIER=38, 
		WHITE_SPACE=39, ERROR_CHAR=40;
	public static final int
		RULE_program = 0, RULE_data_item = 1, RULE_data_property = 2, RULE_data_participant = 3, 
		RULE_data_participant_identities = 4, RULE_data_element = 5, RULE_data_declaration = 6, 
		RULE_domain_type = 7, RULE_data_annotation_list = 8, RULE_data_annotation = 9, 
		RULE_logic_item = 10, RULE_x_logic_item = 11, RULE_x_on_chain_separate = 12, 
		RULE_x_on_main_system_separate = 13, RULE_x_both = 14, RULE_block_of_code = 15, 
		RULE_block_of_code_inner = 16, RULE_block_of_code_outer = 17, RULE_comment = 18, 
		RULE_function_name = 19, RULE_controller_and_function = 20, RULE_list_of_params = 21, 
		RULE_param_declaration = 22, RULE_identifier = 23, RULE_type = 24, RULE_generic = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "data_item", "data_property", "data_participant", "data_participant_identities", 
			"data_element", "data_declaration", "domain_type", "data_annotation_list", 
			"data_annotation", "logic_item", "x_logic_item", "x_on_chain_separate", 
			"x_on_main_system_separate", "x_both", "block_of_code", "block_of_code_inner", 
			"block_of_code_outer", "comment", "function_name", "controller_and_function", 
			"list_of_params", "param_declaration", "identifier", "type", "generic"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'program'", "'data'", "'Property'", "'Participant'", 
			"'Participant_x509Identities'", "'function'", "'string'", "'number'", 
			"'boolean'", "'readonly'", "'type'", "'public'", "'async'", "'@XOnChain'", 
			"'@XOnMainSystem'", "'@XAll'", "'@XOnlyOnChain'", null, null, null, "'yup.'", 
			"'/*'", "'*/'", "'<'", "'>'", "'{{'", "'}}'", "'='", "';'", "':'", "','", 
			"'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SINGLE_QUOTED_LITERAL", "TYPE", "Program", "Data", "Property", 
			"Participant", "Participant_x509Identities", "FUNCTION", "STRING", "NUMBER", 
			"BOOLEAN", "READONLY", "TYPE_KEYWORD", "PUBLIC", "ASYNC", "X_ON_CHAIN_ANNOTATION", 
			"X_ON_MAIN_SYSTEM_ANNOTATION", "X_ALL_ANNOTATION", "X_ONLY_ON_CHAIN_ANNOTATION", 
			"READONLY_ANNOTATION", "VALIDATE_ANNOTATION", "REQUIRED_ANNOTATION", 
			"YUP", "COMMENT_START", "COMMENT_END", "LESS_EQUAL", "GREATER_EQUAL", 
			"OPEN_BLOCK", "CLOSE_BLOCK", "EQUAL", "SEMICOLON", "COLON", "COMMA", 
			"OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_CBRACE", "CLOSE_CBRACE", "IDENTIFIER", 
			"WHITE_SPACE", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ts.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode Program() { return getToken(tsParser.Program, 0); }
		public TerminalNode OPEN_CBRACE() { return getToken(tsParser.OPEN_CBRACE, 0); }
		public TerminalNode CLOSE_CBRACE() { return getToken(tsParser.CLOSE_CBRACE, 0); }
		public List<TerminalNode> WHITE_SPACE() { return getTokens(tsParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(tsParser.WHITE_SPACE, i);
		}
		public List<Logic_itemContext> logic_item() {
			return getRuleContexts(Logic_itemContext.class);
		}
		public Logic_itemContext logic_item(int i) {
			return getRuleContext(Logic_itemContext.class,i);
		}
		public List<Data_itemContext> data_item() {
			return getRuleContexts(Data_itemContext.class);
		}
		public Data_itemContext data_item(int i) {
			return getRuleContext(Data_itemContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tsVisitor ) return ((tsVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(Program);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(53);
				match(WHITE_SPACE);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(OPEN_CBRACE);
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(60);
					match(WHITE_SPACE);
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(69);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(66);
					logic_item();
					}
					} 
				}
				setState(71);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(75);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(72);
					match(WHITE_SPACE);
					}
					} 
				}
				setState(77);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Data) {
				{
				{
				setState(78);
				data_item();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(84);
				match(WHITE_SPACE);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(CLOSE_CBRACE);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(91);
				match(WHITE_SPACE);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_itemContext extends ParserRuleContext {
		public Data_propertyContext data_property() {
			return getRuleContext(Data_propertyContext.class,0);
		}
		public Data_participantContext data_participant() {
			return getRuleContext(Data_participantContext.class,0);
		}
		public Data_participant_identitiesContext data_participant_identities() {
			return getRuleContext(Data_participant_identitiesContext.class,0);
		}
		public Data_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).enterData_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).exitData_item(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tsVisitor ) return ((tsVisitor<? extends T>)visitor).visitData_item(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_itemContext data_item() throws RecognitionException {
		Data_itemContext _localctx = new Data_itemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_data_item);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				data_property();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				data_participant();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				data_participant_identities();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_propertyContext extends ParserRuleContext {
		public TerminalNode Data() { return getToken(tsParser.Data, 0); }
		public TerminalNode Property() { return getToken(tsParser.Property, 0); }
		public TerminalNode OPEN_BLOCK() { return getToken(tsParser.OPEN_BLOCK, 0); }
		public TerminalNode CLOSE_BLOCK() { return getToken(tsParser.CLOSE_BLOCK, 0); }
		public List<TerminalNode> WHITE_SPACE() { return getTokens(tsParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(tsParser.WHITE_SPACE, i);
		}
		public List<Data_elementContext> data_element() {
			return getRuleContexts(Data_elementContext.class);
		}
		public Data_elementContext data_element(int i) {
			return getRuleContext(Data_elementContext.class,i);
		}
		public Data_propertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).enterData_property(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).exitData_property(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tsVisitor ) return ((tsVisitor<? extends T>)visitor).visitData_property(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_propertyContext data_property() throws RecognitionException {
		Data_propertyContext _localctx = new Data_propertyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_data_property);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(Data);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(103);
				match(WHITE_SPACE);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(Property);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(110);
				match(WHITE_SPACE);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(OPEN_BLOCK);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(117);
				match(WHITE_SPACE);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(123);
				data_element();
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(124);
						match(WHITE_SPACE);
						}
						} 
					}
					setState(129);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << X_ALL_ANNOTATION) | (1L << X_ONLY_ON_CHAIN_ANNOTATION) | (1L << READONLY_ANNOTATION) | (1L << VALIDATE_ANNOTATION) | (1L << REQUIRED_ANNOTATION))) != 0) );
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(134);
				match(WHITE_SPACE);
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			match(CLOSE_BLOCK);
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(141);
					match(WHITE_SPACE);
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_participantContext extends ParserRuleContext {
		public TerminalNode Data() { return getToken(tsParser.Data, 0); }
		public TerminalNode Participant() { return getToken(tsParser.Participant, 0); }
		public TerminalNode OPEN_BLOCK() { return getToken(tsParser.OPEN_BLOCK, 0); }
		public TerminalNode CLOSE_BLOCK() { return getToken(tsParser.CLOSE_BLOCK, 0); }
		public List<TerminalNode> WHITE_SPACE() { return getTokens(tsParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(tsParser.WHITE_SPACE, i);
		}
		public List<Data_elementContext> data_element() {
			return getRuleContexts(Data_elementContext.class);
		}
		public Data_elementContext data_element(int i) {
			return getRuleContext(Data_elementContext.class,i);
		}
		public Data_participantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_participant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).enterData_participant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).exitData_participant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tsVisitor ) return ((tsVisitor<? extends T>)visitor).visitData_participant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_participantContext data_participant() throws RecognitionException {
		Data_participantContext _localctx = new Data_participantContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_data_participant);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(Data);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(148);
				match(WHITE_SPACE);
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			match(Participant);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(155);
				match(WHITE_SPACE);
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			match(OPEN_BLOCK);
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(162);
				match(WHITE_SPACE);
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(175); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(168);
				data_element();
				setState(172);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(169);
						match(WHITE_SPACE);
						}
						} 
					}
					setState(174);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				}
				}
				}
				setState(177); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << X_ALL_ANNOTATION) | (1L << X_ONLY_ON_CHAIN_ANNOTATION) | (1L << READONLY_ANNOTATION) | (1L << VALIDATE_ANNOTATION) | (1L << REQUIRED_ANNOTATION))) != 0) );
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(179);
				match(WHITE_SPACE);
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185);
			match(CLOSE_BLOCK);
			setState(189);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(186);
					match(WHITE_SPACE);
					}
					} 
				}
				setState(191);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_participant_identitiesContext extends ParserRuleContext {
		public TerminalNode Data() { return getToken(tsParser.Data, 0); }
		public TerminalNode Participant_x509Identities() { return getToken(tsParser.Participant_x509Identities, 0); }
		public TerminalNode OPEN_BLOCK() { return getToken(tsParser.OPEN_BLOCK, 0); }
		public TerminalNode CLOSE_BLOCK() { return getToken(tsParser.CLOSE_BLOCK, 0); }
		public List<TerminalNode> WHITE_SPACE() { return getTokens(tsParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(tsParser.WHITE_SPACE, i);
		}
		public List<Data_elementContext> data_element() {
			return getRuleContexts(Data_elementContext.class);
		}
		public Data_elementContext data_element(int i) {
			return getRuleContext(Data_elementContext.class,i);
		}
		public Data_participant_identitiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_participant_identities; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).enterData_participant_identities(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tsListener ) ((tsListener)listener).exitData_participant_identities(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tsVisitor ) return ((tsVisitor<? extends T>)visitor).visitData_participant_identities(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_participant_identitiesContext data_participant_identities() throws RecognitionException {
		Data_participant_identitiesContext _localctx = new Data_participant_identitiesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_data_participant_identities);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(Data);
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(193);
				match(WHITE_SPACE);
				}
				}
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(199);
			match(Participant_x509Identities);
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(200);
				match(WHITE_SPACE);
				}
				}
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(206);
			match(OPEN_BLOCK);
			setState(210);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(207);
				match(WHITE_SPACE);
				}
				}
				setState(212);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(220); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(213);
				data_element();
				setState(217);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(214);
						match(WHITE_SPACE);
						}
						} 
					}
					setState(219);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
				}
				}
				}
				setState(222); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << X_ALL_ANNOTATION) | (1L << X_ONLY_ON_CHAIN_ANNOTATION) | (1L << READONLY_ANNOTATION) | (1L << VALIDATE_ANNOTATION) | (1L << REQUIRED_ANNOTATION))) != 0) );
			setState(227);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(224);
				match(WHITE_SPACE);
				}
				}
				setState(229);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(230);
			match(CLOSE_BLOCK);
			setState(234);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,28,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(231);
					match(WHITE_SPACE);
					}
					} 
				}
				setState(236);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,28,_ctx);
			}
			}
		}
